--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.8",
     "react-transition-group": "^2.9.0",
     "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
