--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "antd": "^3.16.2",
     "axios": "^0.18.0",
