--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "todolist",
+  "name": "jianshu",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "antd": "^3.16.2",
     "axios": "^0.18.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
@@ -17,7 +16,6 @@
     "react-transition-group": "^2.9.0",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
-    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
