--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jianshu",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://anno59.github.io/jianshu",
   "dependencies": {
     "axios": "^0.18.0",
     "immutable": "^4.0.0-rc.12",
@@ -33,5 +33,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
