--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://anno59.github.io/jianshu",
   "dependencies": {
     "antd": "^3.16.2",
     "axios": "^0.18.0",
